--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "kwk-scrollytelling-template",
+  "name": "support-doctors",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://jasminesamra.github.io/kwk-scrollytelling-template",
+  "homepage": "https://melgonz00.github.io/support-doctors",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
